@@ -82,7 +82,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
   </tr>
     
   <tr>
-    <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
+    <td><p align="center"><img src="@IMAGES@red-fedora.png"></p></td>
     <td>
       Fedora Core 
     </td>
@@ -139,7 +139,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
   <tr>
     <td>
       <p align="center">
-	<img src="@IMAGES@redhat-logo.png">
+	<img src="@IMAGES@red-fedora.png">
       </p>
     </td>
     <td>
@@ -254,11 +254,14 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
 
 <h2>Download LilyPond 2.5</h2>
 
+<b>Note</b> <a name="gs815"></a>
+LilyPond 2.5 requires version 8.15 or better of <a
+href="http://www.cups.org/articles.php?L216">Ghostscript</a>.
+
 
 <a name="2.5"></a>
 <table width="100%" border="0" rules="rows" cellpadding="3">
-  
-  
+    
   <!-- use this as template for new entry !-->
   <tr>
     <th></th>
@@ -290,7 +293,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
   <tr>
     <td>
       <p align="center">
-	<img src="@IMAGES@redhat-logo.png">
+	<img src="@IMAGES@red-fedora.png">
       </p>
     </td>
     <td>
@@ -300,12 +303,15 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
       3
     </td>
     <td><b>Download 
-	<a href="http://lilypond.org/download/binaries/Fedora-3/lilypond-2.5.3-1.i386.rpm">lilypond</a>,
+	<a href="http://lilypond.org/download/binaries/Fedora-3/lilypond-2.5.13-1.i386.rpm">lilypond</a>,
 	<a
-	   href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.5.3-1.i386.rpm">documentation</a></b>
-      (<a href="#ec-fonts">NOTE</a>)
+	   href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.5.13-1.i386.rpm">documentation</a>,
+	<a
+	   href="http://lilypond.org/download/binaries/Fedora-3/ghostscript-8.15rc2-1.i386.rpm">ghostscript</a>
+	   </b>
+      (<a href="#gs815">NOTE</a>)
     </td>
-    <td>2.5.3</td>
+    <td>2.5.13</td>
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
 
