@@ -49,7 +49,7 @@
 </ul>
 
 <p>
-  If you are not 100% sure what setup.exe asks, please do not change the
+  If you are not 100% sure what <tt>setup.exe</tt> asks, do not change the
   defaults.  <strong>Do not</strong> change the default install
   directory (<code>c:/cygwin</code>), and
   <strong>do not</strong> change the default text type (type UNIX must
@@ -126,6 +126,7 @@ This will process the file, and show the result in a PDF viewer.
   <li>
     By brute force:
     remove <code>C:\CYGWIN</code>.
+    <p>
     <em>This also removes your Cygwin <code>/home/</code> directory,
       so 
       copy important files to somewhere else first</em>.
